--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
         <h4 id = "episode-no"></h4></p>
         <h4>Description: </h4>
         <p id = "description"></p>
-
-        <button>Authenticate</button>
+        <script src="auth.js"></script>
+        <button id = "auth">Authenticate</button>
     </body>
 </html>
