got authorisation to work

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,26 @@
         <h4 id = "episode-no"></h4></p>
         <h4>Description: </h4>
         <p id = "description"></p>
-        <script src="auth.js"></script>
+        <!--<script src="auth.js"></script>-->
+        <script>
+            window.onload = function(){
+                document.getElementById("auth").onclick = 
+                function authorise(){
+                    chrome.identity.launchWebAuthFlow(
+                    {
+                        'url': 'https://anilist.co/api/v2/oauth/authorize?client_id=2636&response_type=token',
+                        'interactive': true
+                    },
+                    function(url){
+                    const params = new URLSearchParams(url);
+                    var token  = params.get('access_token');
+                    chrome.storage.sync.set({code: token}, function() {
+                        console.log('Code is set to ' + token);
+                    });
+                    });
+                }
+            }
+        </script>
         <button id = "auth">Authenticate</button>
     </body>
 </html>
