--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <body>
+        
         <h4>Title:</h4>
         <p id = "anime-title"></p>
         <h4>Episode: </h4>
         <h4 id = "episode-no"></h4></p>
         <h4>Description: </h4>
         <p id = "description"></p>
+        <script src = "popup.js"></script>
         <script src="auth.js"></script>
         <button id = "auth">Authenticate</button>
     </body>
