--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
         <h4>Title:</h4>
         <p id = "anime-title"></p>
         <h4>Episode: </h4>
-        <h4 id = "episode-no"></h4></p>
+        <h4 id = "episode-no"></h4>
         <h4>Description: </h4>
         <p id = "description"></p>
         <script src = "popup.js"></script>
