Added ptions page, not linked yet

--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,9 @@
         <h4 id = "episode-no"></h4>
         <h4>Description: </h4>
         <p id = "description"></p>
+        <button id = "auth">Authenticate</button>
+        <button id = "options">Options</button>
         <script src = "popup.js"></script>
         <script src="auth.js"></script>
-        <button id = "auth">Authenticate</button>
     </body>
 </html>
