--- a/options.html
+++ b/options.html
@@ -7,7 +7,8 @@
         <h3>Options</h3>
         <p>Enter new percentage of episode watched for AniList updation:</p><br>
 
-        <input type="text">
-        <input type = "button" value = "Submit" onclick="submitFunc()">
+        <input type="text" id = "getper">
+        <input type = "button" value = "Submit" id = "btn">
+        <script src = "options.js"></script>
     </body>
 </html>
