--- a/options.html
+++ b/options.html
@@ -9,6 +9,7 @@
 
         <input type="text" id = "getper">
         <input type = "button" value = "Submit" id = "btn">
+        <p id = "confirm" style="display: none;">Successfully Changed</p>
         <script src = "options.js"></script>
     </body>
 </html>
