--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h4>Title:</h4>
-        <p id = "anime-title"></p>
-        <h4>Episode: </h4>
-        <h4 id = "episode-no"></h4>
-        <h4>Description: </h4>
-        <p id = "description"></p>
-        <button id = "options">Options</button>
+        <div id = "popup" style = "width: 400px;">
+            <p id = "header">Title:</p>
+            <p id = "anime-title"></p>
+            <p id = "header">Episode: </p>
+            <p id = "episode-no"></p>
+            <p id = "header">Description: </p>
+            <p id = "description"></p>
+            <button id = "options">Options</button>
+        </div>
         <script src = "popup.js"></script>
         <!--
         <button id = "auth">Authenticate</button>
